Switch to pptx images, because the original set is fantastic

--- a/slides/game-plot-story.html
+++ b/slides/game-plot-story.html
@@ -1,5 +1,1 @@
-<h2>Game Plot & Story</h2>
-
-<p>The programmer’s journey: a quest for a group of programmers to defeat all of the bugs in search of the polynomial time algorithm for the Traveling Salesman...</p>
-
-<img src="assets/images/gamePlotStory.png"/>
+<img src="assets/images/Slide2.png"/>
