--- a/slides/project-development.html
+++ b/slides/project-development.html
@@ -1,22 +1,1 @@
-<h2>Project Development</h2>
-
-<ul>
-  <li>Language</li>
-  <ul class="fragment">
-    <li>Java</li>
-  </ul>
-  <li>Libraries</li>
-  <ul class="fragment">
-    <li>Slick2D</li>
-    <li>LightWeight Java Game Library (LWJGL)</li>
-    <li>OpenCSV</li>
-  </ul>
-  <li>IDE</li>
-  <ul class="fragment">
-    <li>Eclipse</li>
-  </ul>
-  <li>VCS/SCM</li>
-  <ul class="fragment">
-    <li>BitBucket Git repository</li>
-  </ul>
-</ul>
+<img src="assets/images/Slide5.png"/>
