--- a/slides/system-architecture.html
+++ b/slides/system-architecture.html
@@ -1,17 +1,1 @@
-<h2>System Architecture</h2>
-
-<ul>
-  <li>Slick2d render() & update() calls</li>
-  <ul class="fragment">
-    <li>Entry point --> AOMain (main loop)</li>
-    <li>AOMain --> AOGameLogic / AOPM / AOEM / Current Player (on render / update)</li>
-    <li>AOGameLogic --> AOAI / AOPM / AOEM (on update)</li>
-    <li>Current Player --> AOComponent (on render / update)</li>
-  </ul>
-  <li>What is in a game state?</li>
-  <ul class="fragment">
-    <li>Board - AOTileMapper</li>
-    <li>Allies - AOPlayerManager</li>
-    <li>Enemies - AOEnemyManager</li>
-  </ul>
-</ul>
+<img src="assets/images/Slide6.png"/>
