--- a/slides/screenshot.html
+++ b/slides/screenshot.html
@@ -1,3 +1,3 @@
-<h2>Screenshot</h2>
+<h2>Take a look!</h2>
 
-<p>Please change me!</p>
+<iframe width="1280" height="560" src="https://www.youtube.com/embed/ATG4rY0u8ic?rel=0" frameborder="0" allowfullscreen></iframe>
